--- a/package.json
+++ b/package.json
@@ -1,19 +1,14 @@
 {
-  "jspm": {
-    "directories": {},
-    "dependencies": {
-      "diff-dom": "npm:diff-dom@^1.0.0",
-      "html-to-vdom": "npm:html-to-vdom@^0.5.5",
-      "lodash": "npm:lodash@^3.6.0",
-      "virtual-dom": "npm:virtual-dom@^2.0.1"
-    },
-    "devDependencies": {
-      "babel": "npm:babel@^4.7.16",
-      "babel-runtime": "npm:babel-runtime@^4.7.16"
-    }
-  },
   "devDependencies": {
-    "jspm": "^0.15.1",
+    "bluebird": "^2.9.24",
     "nodemon": "^1.3.7"
+  },
+  "dependencies": {
+    "html-to-vdom": "^0.5.5",
+    "jfs": "^0.2.5",
+    "leadfoot": "^1.2.1",
+    "lodash": "^3.7.0",
+    "virtual-dom": "^2.0.1",
+    "webdriver-manager": "^4.0.0"
   }
 }
