--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "nodemon": "^1.3.7"
   },
   "dependencies": {
+    "diff-dom": "^1.1.0",
     "html-to-vdom": "^0.5.5",
     "jfs": "^0.2.5",
     "leadfoot": "^1.2.1",
