--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "devDependencies": {
-    "nodemon": "^1.3.7"
+    "nodemon": "^1.3.7",
+    "leadfoot": "^1.2.1",
+    "webdriver-manager": "^4.0.0"
   },
   "dependencies": {
     "html-to-vdom": "^0.5.5",
     "jfs": "^0.2.5",
-    "leadfoot": "^1.2.1",
     "lodash": "^3.7.0",
-    "virtual-dom": "^2.0.1",
-    "webdriver-manager": "^4.0.0"
+    "virtual-dom": "^2.0.1"
   },
   "name": "integrator-match",
   "description": "fuzzy-element-match ===",
