--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "devDependencies": {
-    "nodemon": "^1.3.7",
     "leadfoot": "^1.2.1",
+    "nodemon": "^1.3.7",
     "webdriver-manager": "^4.0.0"
   },
   "dependencies": {
+    "immutable": "^3.7.2",
     "html-to-vdom": "^0.5.5",
     "jfs": "^0.2.5",
     "lodash": "^3.7.0",
